--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>A Generic Page</title>
-    <meta name="description" content="something good should go here">
-    <meta name="author" content="your name should go here">
+    <meta name="description" content="Zishan">
+    <meta name="author" content="Hi">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -26,7 +26,7 @@
 
   <body>
     <div class="container">
-		PUT STUFF HERE
+		sadasdasdasdasdasd
     </div>
   </body>
 </html>
