--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
   <body>
     <div class="container">
-		sajkldjasdkljaslkdjalksdjalksdjaklsdjklasdjkajdlkajsdlkadjalksdjlkajdklasdjkasdjaksjdkalsjdlkasjdlkasjdlkasjdlkasdjlkasjdlkas
-		
+		PUT STUFF HERE
     </div>
   </body>
 </html>
